[gd_scene load_steps=7 format=2]

[ext_resource path="res://bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://ships/movement_visualizer.gd" type="Script" id=2]
[ext_resource path="res://ships/star_base.gd" type="Script" id=3]
[ext_resource path="res://assets/ships/ufoBlue.png" type="Texture" id=4]
[ext_resource path="res://assets/starbase_shader.tres" type="Material" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 47.0

[node name="Node2D" type="Node2D"]

[node name="Area2D_starbase" type="Area2D" parent="." groups=[
"starbase",
]]
position = Vector2( 0, 1 )
script = ExtResource( 3 )
bullet = ExtResource( 1 )

[node name="star_base" type="Sprite" parent="Area2D_starbase"]
material = ExtResource( 5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_starbase"]
shape = SubResource( 1 )

[node name="bullet_container" type="Node" parent="Area2D_starbase"]

[node name="muzzle" type="Position2D" parent="Area2D_starbase"]

[node name="gun_timer" type="Timer" parent="Area2D_starbase"]
wait_time = 0.5
one_shot = true

[node name="vis" type="Node2D" parent="Area2D_starbase"]
script = ExtResource( 2 )

[node name="produce_timer" type="Timer" parent="Area2D_starbase"]
wait_time = 5.0
autostart = true
[connection signal="input_event" from="Area2D_starbase" to="Area2D_starbase" method="_on_Area2D_input_event"]
[connection signal="timeout" from="Area2D_starbase/produce_timer" to="Area2D_starbase" method="_on_produce_timer_timeout"]
